# simple-codex

./: .gitignore  Cargo.toml  README.md  config.toml.example
src/: client.rs  config.rs  main.rs  sse.rs  types.rs
