[package]
name = "simple-codex"
version = "0.1.0"
edition = "2024"

# Dependency versions mirror codex's workspace
# (see codex-rs/Cargo.toml `[workspace.dependencies]`).
[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "sync"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "native-tls"] }
eventsource-stream = "0.2.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
futures = { version = "0.3", default-features = false, features = ["std"] }
bytes = "1"
toml = "0.9"
